name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/IQubic/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Avi Caspe
maintainer:          avi.caspe@gmail.com
copyright:           BSD3
category:            Devel
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, csound-expression, haskell-gi-base, haskell-gi, gi-gtk, MorseCode
